blog adjustments headings

--- a/footer.html
+++ b/footer.html
@@ -39,6 +39,16 @@
                   justify-content: center;
             }
 
+            h3,
+            h4 {
+                  font-family: 'Oswald', sans-serif;
+                  font-weight: 600;
+                  letter-spacing: 0.5px;
+                  color: #000;
+                  justify-self: center;
+                  padding: 1.15;
+            }
+
             .flex-item:hover img {
                   transform: scale(1.2);
             }
@@ -97,7 +107,7 @@
 
       <div class="container" style="margin-right: 10px; margin-left: 10px; width:max-content;"></div>
       <!-- Content Main Section Begins -->
-      <h3 style="text-align: center; font-size: 35px; margin-top: 40px;">MAKING THE 2025 SUMMIT HAPPEN</h3>
+      <h3 style="text-align: center !important; font-size: 35px; margin-top: 40px;">MAKING THE 2025 SUMMIT HAPPEN</h3>
 
       <div class="logo-grid">
             <img src="images/collabs/Helsingin-yliopisto-oikis.PNG" alt="Helsingin yliopisto"
