blog adjustmens add blog image

--- a/blog.html
+++ b/blog.html
@@ -364,6 +364,31 @@
 			gap: 1.5rem;
 		}
 
+
+		.blog-graphic {
+			margin: 3rem auto;
+
+			max-width: var(--max-width);
+
+			text-align: center;
+		}
+
+		.blog-graphic img {
+			width: 100%;
+			height: auto;
+			border-radius: .5rem;
+
+			box-shadow: 0 4px 12px rgba(0, 0, 0, .08);
+		}
+
+		.blog-graphic figcaption {
+			margin-top: .75rem;
+			font-size: .9rem;
+			color: #555;
+			line-height: 1.4;
+		}
+
+
 		.blog-nav a {
 			font: 600 1rem/1 Oswald, sans-serif;
 			text-decoration: none;
@@ -567,6 +592,18 @@
 				<li>Embedding design thinking into our approach was our most valuable tool </li>
 			</ul>
 			<p>Thanks again to everyone involved - see you in Helsinki in September! </p>
+
+			<!-- Visual wrap‑up of the creation process -->
+			<figure class="blog-graphic">
+				<img src="images/gallery/From Proposals to Program_ Creating the Legal Design Summit 2025.png"
+					alt="Illustrated flow from speaker proposals to the final Legal Design Summit 2025 program, featuring colourful sticky‑notes, the Finnish flag and a unicorn."
+					loading="lazy">
+				<figcaption>
+					From ideas on sticky‑notes to a polished two‑day experience – a snapshot of
+					our journey.
+				</figcaption>
+			</figure>
+
 
 		</article>
 		<br>
