gallery example creation

--- a/the-gallery.html
+++ b/the-gallery.html
@@ -527,7 +527,7 @@
                     <li><a href="#">Access to justice</a></li>
                 </ul>
             </aside>
-            <!--  MAIN AREA ------------------------------------------------ -->
+
             <main class="gallery-main">
                 <h2 class="gallery-collective">The "Name" Collective</h2>
 
@@ -541,15 +541,17 @@
                             </div>
 
                             <div class="exhibition-body">
-                                <h3 class="exhibition-title">Exhibition title</h3>
-                                <p class="exhibition-meta">Name | Organisation</p>
-                                <p class="exhibition-summary">Short summary (25 words)</p>
+                                <h3 class="exhibition-title">The Legal Icon Dictionary</h3>
+                                <p class="exhibition-meta">Aneta Baranowska</p>
+                                <p class="exhibition-summary">We created a visual icon dictionary to simplify legal
+                                    documents, making them more accessible, engaging, and understandable for non-lawyers
+                                    through intuitive, user-tested visual design.</p>
                             </div>
 
                             <footer class="exhibition-footer">
                                 <div class="badge-container">
                                     <span class="badge">Tags</span>
-                                    <span class="badge badge-year">2024</span>
+                                    <span class="badge badge-year">2025</span>
                                 </div>
                                 <div class="exhibition-actions">
                                     <a href="#" class="social-icon linkedin-icon" aria-label="LinkedIn"></a>
@@ -558,44 +560,110 @@
                             </footer>
                         </div>
 
-                        <!-- ───── FULL EXHIBITION (initially hidden) ───── -->
                         <div class="exhibition-details" hidden aria-hidden="true">
                             <div class="details-inner">
                                 <div class="details-image">
-                                    <!-- square / portrait works fine -->
-                                    <img src="images/speakers/2025/Aaron_Leakey.png" alt="Black & white portrait">
+
+                                    <img src="images/gallery/the-gallery-background.png" alt="Black & white portrait">
                                 </div>
 
                                 <div class="details-text">
-                                    <h2 class="details-title">The Gallery<br><span>[Exhibition title]</span></h2>
+                                    <h2 class="details-title">The Gallery<br><span>The Legal Icon Dictionary</span></h2>
 
                                     <h3 class="person-name">
-                                        <img src="images/flags/vn.svg" alt="" height="18"> Name Surname
+                                        <img src="images/flags/vn.svg" alt="" height="18"> Aneta Baranowska
                                     </h3>
                                     <p class="person-meta">Position | Organisation</p>
 
                                     <p class="person-links">
-                                        <a href="#" class="linkedin-icon">LinkedIn</a> | <a
-                                            href="mailto:name@surname.com">@ email</a>
+                                        <a href="www.linkedin.com/in/aneta-baranowska-out-law"
+                                            class="linkedin-icon">LinkedIn</a>
                                     </p>
 
                                     <hr>
 
-                                    <h4>About me</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at semper est,
-                                        non consequat magna.</p>
-
                                     <h4>About this work</h4>
-                                    <p>Lorem ipsum…</p>
+                                    <p>Legal documents are notoriously difficult to understand due to their complexity,
+                                        formal language, and abstract terminology. This creates a communication barrier
+                                        between legal professionals and their clients, particularly non-lawyers who are
+                                        often the intended recipients of these documents. Our work addresses this issue
+                                        through the development of a visual tool: the Legal Icon Dictionary.
+                                    </p>
+                                    <p>
+                                        The Legal Icon Dictionary is a curated set of intuitive, standardized icons that
+                                        represent key legal terms and concepts. It functions as a visual layer that can
+                                        be integrated into legal documents - such as contracts, terms and conditions,
+                                        and privacy policies - to support and clarify written content. The dictionary
+                                        transforms abstract or ambiguous legal ideas into concrete, visual symbols that
+                                        enhance comprehension and reduce cognitive load.
+                                    </p>
+                                    <p>
+                                        In co-creation of legal designers, graphic designers, and users, we mapped
+                                        common legal concepts that are difficult to interpret and translated them into
+                                        universally understandable icons. The process involved user research, iterative
+                                        prototyping, and validation to ensure each icon conveyed its intended meaning.
+                                        What inspired this project was a very practical challenge: even when lawyers
+                                        want to make their documents more accessible by using visual elements, they
+                                        often struggle to find the right tools. Searching through hundreds of icons
+                                        online or trying to assemble visuals in office software can be frustrating and
+                                        time-consuming. Our goal was not only to make documents easier to understand for
+                                        end users, but also to make them easier to create for legal professionals.
+                                        In its current format, the Legal Icon Dictionary consists of the:
+                                    <ul>
+                                        <li>1. report from our research</li>
+                                        <li>2. ready-to-use set of icons</li>
+                                        <li>3. and manual full of tips on how to use them</li>
+                                    </ul>
+
+                                    – free for everyone to download and implement into their work. It reflects our
+                                    commitment to demystifying the law through design, accessibility, and empathy.
+                                    </p>
 
                                     <h4>Impact</h4>
-                                    <p>Lorem ipsum…</p>
+                                    <p>The Legal Icon Dictionary has had an impact on both legal professionals and
+                                        document recipients. By providing a ready-to-use, thoughtfully designed set of
+                                        icons, we enabled lawyers - especially those taking their first steps into legal
+                                        design—to create clearer, more user-friendly documents without the typical
+                                        frustration of searching for visuals or struggling with formatting.
+                                        We know of instances where the icons have been implemented into real-life legal
+                                        documents, such as terms of service, privacy policies, and contracts. The icons
+                                        helped clarify the structure and meaning of the text, resulting in more
+                                        accessible and transparent communication for end users.
+                                        Beyond document design, the Icon Dictionary has become a valuable resource in
+                                        our legal design workshops. We use it as both a practical tool and an
+                                        educational example of how visual thinking can improve legal communication. It
+                                        allows participants to experience first-hand how even small design interventions
+                                        - like the addition of icons - can have a significant (good or bad, depending on
+                                        the use!) effect on the document created.
+                                        By addressing the needs of both document creators and users, the Icon Dictionary
+                                        continues to promote a more human-centered approach to law, lowering barriers to
+                                        understanding and empowering legal professionals to innovate.
+                                    </p>
 
                                     <h4>Key learnings</h4>
-                                    <p>Lorem ipsum…</p>
+                                    <p>One of our key learnings was that visual tools can significantly enhance the
+                                        accessibility of legal information - but only when used in the right context.
+                                        While icons have the potential to clarify complex content, we discovered that
+                                        without supporting context, users often interpreted them in unintended ways.
+                                        This underlined the abstract nature of symbols: an icon on its own is rarely
+                                        self-explanatory. Providing a clear use-case or embedding the icon within a
+                                        familiar legal structure improved user understanding and reduced
+                                        misinterpretation.
+                                        We also learned that even minor visual details - like the presence or absence of
+                                        a magnifying glass - can dramatically alter how icons are perceived. Users
+                                        tended to over-focus on specific graphic elements, leading to unexpected
+                                        associations. As a result, icon design must be tested with real users and
+                                        refined, as small changes can have a huge impact on usability.
+                                        A positive takeaway was that icons resembling familiar visual systems (e.g.,
+                                        from Office or mobile apps) were more easily understood. Leveraging users'
+                                        existing visual literacy helped ground abstract legal concepts in something
+                                        intuitive.
+                                    </p>
 
-                                    <h4>Visuals / video links</h4>
-                                    <p><a href="https://youtu.be/your-video">Watch the demo on YouTube</a></p>
+                                    <h4>Material</h4>
+                                    <p><a
+                                            href="https://drive.google.com/drive/u/1/folders/1MStf4zmhxPqQq5KCRci4EG3gKBi5r6DJ">Download
+                                            the material here</a></p>
                                 </div>
                             </div>
                         </div>
