gallery example update

--- a/the-gallery.html
+++ b/the-gallery.html
@@ -564,7 +564,7 @@
                             <div class="details-inner">
                                 <div class="details-image">
 
-                                    <img src="images/gallery/the-gallery-background.png" alt="Black & white portrait">
+                                    <img src="images/gallery/cytat.svg" alt="Black & white portrait">
                                 </div>
 
                                 <div class="details-text">
