gallery example spellcheck fix

--- a/the-gallery.html
+++ b/the-gallery.html
@@ -515,8 +515,8 @@
         <header class="header">
             <h1 class="main-title">The Gallery</h1>
             <p class="subtitle">An Exhibition of Legal Design in Action</p>
-            <p class="subtitle">A space to explore and celebrate legal design work from around the world Featuring case
-                studies and practical examples contributedby practicipants and partners</p>
+            <p class="subtitle">A space to explore and celebrate legal design work from around the world featuring case
+                studies and practical examples contributed by practicipants and partners</p>
         </header>
         <div class="gallery-wrapper">
             <aside class="gallery-sidebar" aria-labelledby="sidebar-heading">
