gallery example text adjustment

--- a/the-gallery.html
+++ b/the-gallery.html
@@ -303,6 +303,7 @@
             font-size: 15px;
         }
 
+
         @media (max-width: 900px) {
             .exhibitions-grid {
                 grid-template-columns: 1fr;
@@ -550,12 +551,13 @@
 
                             <footer class="exhibition-footer">
                                 <div class="badge-container">
-                                    <span class="badge">Tags</span>
-                                    <span class="badge badge-year">2025</span>
+                                    <span class="badge">#Visualization</span>
+                                    <span class="badge badge-year">2024</span>
                                 </div>
                                 <div class="exhibition-actions">
-                                    <a href="#" class="social-icon linkedin-icon" aria-label="LinkedIn"></a>
-                                    <a href="#" class="social-icon email-icon" aria-label="Email"></a>
+                                    <a href="www.linkedin.com/in/aneta-baranowska-out-law"
+                                        class="social-icon linkedin-icon" aria-label="LinkedIn"></a>
+
                                 </div>
                             </footer>
                         </div>
@@ -629,12 +631,16 @@
                                         documents, such as terms of service, privacy policies, and contracts. The icons
                                         helped clarify the structure and meaning of the text, resulting in more
                                         accessible and transparent communication for end users.
+                                    </p>
+                                    <p>
                                         Beyond document design, the Icon Dictionary has become a valuable resource in
                                         our legal design workshops. We use it as both a practical tool and an
                                         educational example of how visual thinking can improve legal communication. It
                                         allows participants to experience first-hand how even small design interventions
                                         - like the addition of icons - can have a significant (good or bad, depending on
                                         the use!) effect on the document created.
+                                    </p>
+                                    <p>
                                         By addressing the needs of both document creators and users, the Icon Dictionary
                                         continues to promote a more human-centered approach to law, lowering barriers to
                                         understanding and empowering legal professionals to innovate.
@@ -649,21 +655,30 @@
                                         self-explanatory. Providing a clear use-case or embedding the icon within a
                                         familiar legal structure improved user understanding and reduced
                                         misinterpretation.
+                                    </p>
+                                    <p>
                                         We also learned that even minor visual details - like the presence or absence of
                                         a magnifying glass - can dramatically alter how icons are perceived. Users
                                         tended to over-focus on specific graphic elements, leading to unexpected
                                         associations. As a result, icon design must be tested with real users and
                                         refined, as small changes can have a huge impact on usability.
+                                    </p>
+                                    <p>
                                         A positive takeaway was that icons resembling familiar visual systems (e.g.,
                                         from Office or mobile apps) were more easily understood. Leveraging users'
                                         existing visual literacy helped ground abstract legal concepts in something
                                         intuitive.
                                     </p>
 
-                                    <h4>Material</h4>
+                                    <h4>Learn More</h4>
                                     <p><a
                                             href="https://drive.google.com/drive/u/1/folders/1MStf4zmhxPqQq5KCRci4EG3gKBi5r6DJ">Download
                                             the material here</a></p>
+                                    <p><a href="www.out-law.pl">Read
+                                            the blog</a></p>
+                                    <p><a href=" www.legalnydesign.pl ">Project Site</a></p>
+                                    <p><a href="https://www.linkedin.com/company/legalny-design/?viewAsMember=true  ">Project
+                                            LinkedIn</a></p>
                                 </div>
                             </div>
                         </div>
