--- a/brainfactory.html
+++ b/brainfactory.html
@@ -156,14 +156,13 @@
     .workshop-card {
       .workshop-card {
         background-color: #e0f7f6;
-        /* light-turquoise */
         padding: 20px;
         border-radius: 12px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
         transition: transform 0.2s ease, box-shadow 0.2s ease;
         text-align: center;
         color: #000000;
-        /* Ensure black text for contrast */
+
       }
 
     }
@@ -264,7 +263,7 @@
     }
 
 
-    /* Section headings with underline style */
+
     .section-heading {
       font-family: 'Georgia', serif;
       text-transform: uppercase;
@@ -274,10 +273,10 @@
       display: inline-block;
     }
 
-    /* Workshop Card Styling */
+
     .workshop-card {
       background-color: #e0f7f6;
-      /* light turquoise */
+
       padding: 20px;
       border-radius: 12px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
@@ -367,7 +366,7 @@
       color: #000;
     }
 
-    /* Optional: ensure FAQ <li> styles are reset too if used */
+
     .faq-item li {
       font-size: 15px;
       color: #000;
@@ -451,7 +450,7 @@
       outline-offset: 2px;
     }
 
-    /* ---------- drop-down panel --------------------------------------- */
+
     .lds-nav .more {
       position: relative;
     }
@@ -569,9 +568,8 @@
     </div>
 
     <div class="notification-section">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdVHpAdzXzkP84HBBlDGLZuKNthiVIXex8HG1faU-AU01c5wA/viewform?usp=sharing&ouid=118060274839672406819"
-        target="_blank" class="notify-btn">
-        Register here!
+      <a href="mailto:brainfactory@legaldesignsummit.com" target="_blank" class="notify-btn">
+        Register for the Waitlist
       </a>
     </div>
 
@@ -702,9 +700,8 @@
           </div>
           <div class="workshop-divider">
             <div class="notification-section">
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLSdVHpAdzXzkP84HBBlDGLZuKNthiVIXex8HG1faU-AU01c5wA/viewform?usp=sharing&ouid=118060274839672406819"
-                target="_blank" class="notify-btn">
-                Register here!
+              <a href="mailto:brainfactory@legaldesignsummit.com" target="_blank" class="notify-btn">
+                Register for the Waitlist
               </a>
             </div>
 
@@ -810,9 +807,8 @@
 
 
           <div class="notification-section">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdVHpAdzXzkP84HBBlDGLZuKNthiVIXex8HG1faU-AU01c5wA/viewform?usp=sharing&ouid=118060274839672406819"
-              target="_blank" class="notify-btn">
-              Register here!
+            <a href="mailto:brainfactory@legaldesignsummit.com" target="_blank" class="notify-btn">
+              Register for the Waitlist
             </a>
           </div>
 
@@ -841,16 +837,10 @@
                     <div class="bubble"></div>
                     <h4>Q: How do I participate?</h4>
                     <p>
-                      Full sign up begins on 5 June. Follow Legal Design Summit on LinkedIn and Instagram for the
-                      latest.
-                      When registration is open, you’ll be able to register
-                      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdVHpAdzXzkP84HBBlDGLZuKNthiVIXex8HG1faU-AU01c5wA/viewform?usp=sharing&ouid=118060274839672406819"
-                        style="color: #c30979;">here</a>.
+                      BrainFactory is full! Please register for the waitlist
+                      <a href="mailto:brainfactory@legaldesignsummit.com" style="color: #c30979;">here</a>.
                     </p>
                     <p>
-                      We'll do our best to match you with workshops based on availability, preferences, background, and
-                      experience.
-                      There is something for everyone in these workshops.
                       Check your spam filters or add “brainfactory@legaldesignsummit.com” to your safe senders list to
                       ensure you receive our confirmation emails!
                     </p>
